--- a/client.html
+++ b/client.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>WebSocket Client</title>
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="client.css" />
-  </head>
 
-  <body>
-    <div id="app">
-      <div class="header">
-        <div id="user-name">UserName</div>
-        <button type="button" class="button" id="logout">Logout</button>
-      </div>
-      <div id="content"></div>
-      <div class="footer">
-        <input type="text" name="message" id="message-input" />
-        <button type="button" class="button">Submit</button>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>WebSocket Client</title>
+  <link rel="stylesheet" href="reset.css" />
+  <link rel="stylesheet" href="client.css" />
+</head>
+
+<body>
+  <div id="app" class="app">
+    <div class="header">
+      <div class="header__user-name">UserName</div>
+      <button type="button" class="button">Logout</button>
     </div>
-    <script>
-      window.userName = "Semyon";
-      window.lastName = "Zinge";
-    </script>
-    <script src="client.js"></script>
-  </body>
+    <div class="content"></div>
+    <form class="footer">
+      <input type="text" name="message" class="footer__message-input" />
+      <input type="submit" class="button" value="Submit">
+    </form>
+  </div>
+  <script>
+    window.userName = "Semyon";
+    window.lastName = "Zinge";
+  </script>
+  <script src="client.js"></script>
+</body>
+
 </html>
